sqlci_yacc.output
Terminals unused in grammar

    NOSQL
    CONTAINSQL
    READSQL
    MODIFYSQL
    RESETVIOLATION
    CHECKVIOLATION
    NoAutoXact
    CREATECONTEXT
    CURRENTCONTEXT
    SWITCHCONTEXT
    DELETECONTEXT
    RESETCONTEXT
    ADDtoken
    BACKSLASH
    CANCEL
    CLASStoken
    COPY
    DISPLAY_QUERYID
    DISPLAY_QC
    DISPLAY_QC_ENTRIES
    DISPLAY_QC_ENTRIES_NOTIME
    DISPLAY_USE_OF
    EDIT
    MXCI_TOK_ENV
    FIRST
    FC
    FILEtoken
    FILEINFO
    FILENAMES
    FILES
    HISTORY
    HYPHEN
    INFOtoken
    INtoken
    LISTCOUNT
    LISTMODULES
    MAPtoken
    MIGRATE
    MODIFYV
    NEXT
    NOEtoken
    OBEY
    OBJECTtoken
    OFtoken
    QUIESCE
    REPEAT
    REPORT
    RPAREN
    SETENV
    SQLINFO
    SQLNAMES
    STOREtoken
    SYNTAX
    SYSTEMtoken
    EXAMPLE
    USERtoken
    TENANTtoken
    VALIDATE
    VERBOSE
    VERIFY
    VERSIONtoken
    DEFINEtoken
    PREPARED
    LS
    CD
    SH
    SHELL
    REPOSITORYtoken
    WORK
    SQLCI_CMD
    SQL_STMT
    UTIL_STMT
    EXIT_STMT
    ERROR_STMT
    SHELL_CMD
    BACKUPS
    WITHOUT


State 18 conflicts: 1 reduce/reduce


Grammar

    0 $accept: statement $end

    1 statement: sqlci_cmd
    2          | sql_cmd

    3 sqlci_cmd: MODE SQL

    4 $@1: %empty

    5 sqlci_cmd: LOG IDENTIFIER commands_only $@1 CLEAR
    6          | LOG IDENTIFIER commands_only

    7 $@2: %empty

    8 sqlci_cmd: LOG FILENAME commands_only $@2 CLEAR
    9          | LOG FILENAME commands_only
   10          | LOG
   11          | EXIT
   12          | ERRORtoken NUMBER
   13          | ERRORtoken NUMBER COMMA BRIEF
   14          | ERRORtoken NUMBER COMMA DETAIL
   15          | SUBERRORtoken HBASEtoken NUMBER
   16          | SUBERRORtoken TMtoken NUMBER
   17          | SETtoken PARAM PARAM_NAME
   18          | SETtoken SQ_LINUX_PATTERN PATTERN_NAME
   19          | SETtoken PATTERN_AS_IS PATTERN_NAME
   20          | SETtoken SHOWSHAPE ON
   21          | SETtoken SHOWSHAPE OFF

   22 $@3: %empty

   23 sqlci_cmd: SETtoken SHOWSHAPE INFILE FILENAME $@3 OUTFILE FILENAME
   24          | SETtoken STATISTICS OFF
   25          | SETtoken STATISTICS ON
   26          | SETtoken STATISTICS PERTABLEtoken
   27          | SETtoken STATISTICS PROGRESStoken
   28          | SETtoken STATISTICS DEFAULTtoken
   29          | SETtoken STATISTICS ALLtoken
   30          | SETtoken STATISTICS ON COMMA GETtoken STATISTICS
   31          | SETtoken STATISTICS ON COMMA GETtoken STATISTICS COMMA OPTIONStoken QUOTED_STRING
   32          | SETtoken TERMINAL_CHARSET IDENTIFIER
   33          | SETtoken ISO_MAPPING IDENTIFIER
   34          | SETtoken DEFAULT_CHARSETtoken IDENTIFIER
   35          | SETtoken INFER_CHARSET NUMBER
   36          | SETtoken INFER_CHARSET IDENTIFIER
   37          | SETtoken INFER_CHARSET ON
   38          | SETtoken INFER_CHARSET OFF
   39          | RESET PARAM PARAM_NAME
   40          | RESET SQ_LINUX_PATTERN PATTERN_NAME
   41          | RESET reset_type_
   42          | WAITtoken
   43          | SLEEPtoken NUMBER

   44 commands_only: COMMANDStoken
   45              | empty

   46 empty: %empty

   47 reset_type_: PARAM

   48 stats_active_clause: ACTIVEtoken NUMBER
   49                    | ALLtoken
   50                    | empty

   51 stats_merge_clause: ACCUMULATEDtoken
   52                   | PERTABLEtoken
   53                   | PROGRESStoken
   54                   | DEFAULTtoken
   55                   | empty

   56 qid_identifier: IDENTIFIER
   57               | DQUOTED_STRING

   58 sql_cmd: dml_type

   59 $@4: %empty

   60 $@5: %empty

   61 sql_cmd: DECLAREtoken IDENTIFIER $@4 CURSORWITH HOLD FORtoken $@5 dml_simple_table_type

   62 $@6: %empty

   63 $@7: %empty

   64 sql_cmd: DECLAREtoken IDENTIFIER $@6 CURSORtoken FORtoken $@7 cursor_info
   65        | OPENtoken IDENTIFIER
   66        | FETCHtoken IDENTIFIER
   67        | CLOSEtoken IDENTIFIER
   68        | DEALLOCtoken IDENTIFIER

   69 $@8: %empty

   70 $@9: %empty

   71 sql_cmd: PREPAREtoken IDENTIFIER $@8 FROM $@9 dml_type
   72        | DESCRIBEToken STATEMENTtoken IDENTIFIER
   73        | EXECUTEtoken IDENTIFIER

   74 $@10: %empty

   75 sql_cmd: EXECUTEtoken IDENTIFIER $@10 USING
   76        | EXECUTEtoken
   77        | DISPLAY_EXPLAIN explain_options IDENTIFIER
   78        | DISPLAY_EXPLAIN explain_options PROCEDUREtoken
   79        | DISPLAY_EXPLAIN explain_options dml_type
   80        | DISPLAY_STATISTICS
   81        | DISPLAY_STATISTICS IDENTIFIER

   82 $@11: %empty

   83 $@12: %empty

   84 sql_cmd: DISPLAY_STATISTICS FORtoken CPU NUMBER $@11 stats_active_clause $@12 stats_merge_clause

   85 $@13: %empty

   86 $@14: %empty

   87 sql_cmd: DISPLAY_STATISTICS FORtoken CPU CPU_VALUE $@13 stats_active_clause $@14 stats_merge_clause

   88 $@15: %empty

   89 $@16: %empty

   90 $@17: %empty

   91 sql_cmd: DISPLAY_STATISTICS FORtoken PID NUMBER $@15 COMMA NUMBER $@16 stats_active_clause $@17 stats_merge_clause

   92 $@18: %empty

   93 $@19: %empty

   94 sql_cmd: DISPLAY_STATISTICS FORtoken PID PID_VALUE $@18 stats_active_clause $@19 stats_merge_clause

   95 $@20: %empty

   96 sql_cmd: DISPLAY_STATISTICS FORtoken QID qid_identifier $@20 stats_merge_clause

   97 $@21: %empty

   98 sql_cmd: DISPLAY $@21 dml_type
   99        | GETtoken
  100        | GETSTATISTICStoken
  101        | GETtoken UIDtoken
  102        | SHOW ENVVARtoken
  103        | SETtoken PARSERFLAGS NUMBER
  104        | RESET PARSERFLAGS NUMBER
  105        | RESET PARSERFLAGS
  106        | ERRORtoken NUMBER COMMA GETtoken

  107 optional_rs_index: empty
  108                  | RESULT SETtoken NUMBER

  109 cursor_info: dml_simple_table_type

  110 $@22: %empty

  111 cursor_info: IDENTIFIER $@22 optional_rs_index

  112 dml_type: dml_simple_table_type
  113         | CONTROL
  114         | OSIM
  115         | SETtoken CATALOG
  116         | SETtoken SCHEMA
  117         | SETtoken HIVEtoken
  118         | SETtoken MPLOC
  119         | SETtoken NAMETYPE
  120         | SETtoken SESSIONtoken
  121         | UPDATEtoken
  122         | INSERTtoken
  123         | UPSERTtoken
  124         | ROWSETtoken
  125         | DELETEtoken
  126         | MERGEtoken
  127         | CREATE
  128         | ALTER
  129         | CLEANUP
  130         | DROP
  131         | UPD_STATS
  132         | UPD_HIST_STATS
  133         | METADATAtoken
  134         | INITIALIZE
  135         | REINITIALIZE
  136         | GIVE
  137         | GRANTtoken
  138         | REVOKEtoken
  139         | REGISTER
  140         | UNREGISTER
  141         | BACKUP
  142         | RESTORE
  143         | DUMP
  144         | EXPORTtoken
  145         | IMPORTtoken
  146         | SHOW
  147         | SHOWCONTROL
  148         | SHOWENV
  149         | SHOWINFO
  150         | SHOWDDL
  151         | DESCRIBEToken
  152         | SHOWSTATS
  153         | SHOWTRANSACTION
  154         | DESC
  155         | DESCRIBE
  156         | INVOKE
  157         | SHOW CACHE
  158         | SHOWPLAN
  159         | SHOWSHAPE
  160         | SHOWSET
  161         | LOCK
  162         | UNLOCK
  163         | TOK_BEGIN
  164         | COMMIT
  165         | ROLLBACK
  166         | SET_TABLEtoken
  167         | SET_TRANSACTIONtoken
  168         | MODIFY
  169         | IF
  170         | WHILE
  171         | SIGNAL
  172         | INTERNAL
  173         | MVLOG
  174         | PURGEDATA
  175         | TRUNCATE
  176         | WITH
  177         | POPULATE
  178         | VALIDATEtoken
  179         | REFRESH
  180         | TRANSFORM
  181         | CALLToken
  182         | LOADtoken
  183         | MSCKtoken
  184         | EXTRACTtoken
  185         | REPLICATEtoken
  186         | GENERATEtoken
  187         | EXPLAIN
  188         | GETtoken
  189         | CHECK
  190         | PROCESStoken
  191         | COMMENTtoken
  192         | TOK_SAVEPOINT
  193         | TOK_RELEASE

  194 dml_simple_table_type: SELECTtoken
  195                      | TABLE
  196                      | VALUES
  197                      | LPAREN dml_simple_table_type
  198                      | LOCKINGtoken
  199                      | UNLOAD

  200 explain_options: empty
  201                | OPTIONStoken QUOTED_STRING


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NOSQL (258)
    CONTAINSQL (259)
    READSQL (260)
    MODIFYSQL (261)
    RESETVIOLATION (262)
    CHECKVIOLATION (263)
    NoAutoXact (264)
    DESCRIBEToken (265) 72 151
    CREATECONTEXT (266)
    CURRENTCONTEXT (267)
    SWITCHCONTEXT (268)
    DELETECONTEXT (269)
    RESETCONTEXT (270)
    ADDtoken (271)
    ALLtoken (272) 29 49
    BACKSLASH (273)
    BRIEF (274) 13
    DETAIL (275) 14
    CACHE (276) 157
    CANCEL (277)
    CLASStoken (278)
    CLEANUP (279) 129
    CLEAR (280) 5 8
    COMMA (281) 13 14 30 31 91 106
    COMMANDStoken (282) 44
    CONTROL (283) 113
    OSIM (284) 114
    COPY (285)
    CPU_VALUE <stringval_type> (286) 87
    ERRORtoken (287) 12 13 14 106
    SUBERRORtoken (288) 15 16
    HBASEtoken (289) 15
    TMtoken (290) 16
    DEFAULTtoken (291) 28 54
    DEFAULT_CHARSETtoken (292) 34
    DESC (293) 154
    DESCRIBE (294) 155
    DISPLAY (295) 98
    DISPLAY_STATISTICS (296) 80 81 84 87 91 94 96
    DISPLAY_QUERYID (297)
    DISPLAY_EXPLAIN (298) 77 78 79
    DISPLAY_QC (299)
    DISPLAY_QC_ENTRIES (300)
    DISPLAY_QC_ENTRIES_NOTIME (301)
    DISPLAY_USE_OF (302)
    EDIT (303)
    MXCI_TOK_ENV (304)
    EXIT (305) 11
    EXPLAIN (306) 187
    FIRST (307)
    FC (308)
    FILEtoken (309)
    FILEINFO (310)
    FILENAMES (311)
    FILES (312)
    GENERATEtoken (313) 186
    MERGEtoken (314) 126
    METADATAtoken (315) 133
    REPLICATEtoken (316) 185
    GETtoken (317) 30 31 99 101 106 188
    GETSTATISTICStoken (318) 100
    HISTORY (319)
    HYPHEN <stringval_type> (320)
    INFER_CHARSET (321) 35 36 37 38
    INFOtoken (322)
    INtoken (323)
    INFILE (324) 23
    SHOWENV (325) 148
    SHOWSTATS (326) 152
    SHOWTRANSACTION (327) 153
    INVOKE (328) 156
    LISTCOUNT (329)
    LISTMODULES (330)
    LOADtoken (331) 182
    EXTRACTtoken (332) 184
    LOCK (333) 161
    LOCKINGtoken (334) 198
    LPAREN (335) 197
    MAPtoken (336)
    MIGRATE (337)
    MODE (338) 3
    MODIFY (339) 168
    MODIFYV (340)
    MSCKtoken (341) 183
    NEXT (342)
    NOEtoken (343)
    OBEY (344)
    OBJECTtoken (345)
    OFtoken (346)
    OFF (347) 21 24 38
    ON (348) 20 25 30 31 37
    OPTIONStoken (349) 31 201
    ISO_MAPPING (350) 33
    OUTFILE (351) 23
    PARAM (352) 17 39 47
    PARSERFLAGS (353) 103 104 105
    SQ_LINUX_PATTERN (354) 18 40
    PATTERN_AS_IS (355) 19
    PID_VALUE <stringval_type> (356) 94
    PROCEDUREtoken (357) 78
    PURGEDATA (358) 174
    POPULATE (359) 177
    VALIDATEtoken (360) 178
    QUIESCE (361)
    REFRESH (362) 179
    REPEAT (363)
    REPORT (364)
    RESET (365) 39 40 41 104 105
    RESULT (366) 108
    RPAREN (367)
    SETtoken (368) 17 18 19 20 21 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 103 108 115 116 117 118 119 120
    SETENV (369)
    SHOW (370) 102 146 157
    SHOWCONTROL (371) 147
    SHOWINFO (372) 149
    SHOWDDL (373) 150
    SHOWPLAN (374) 158
    SHOWSHAPE (375) 20 21 23 159
    SHOWSET (376) 160
    SLEEPtoken (377) 43
    SQL (378) 3
    SQLINFO (379)
    SQLNAMES (380)
    STATEMENTtoken (381) 72
    STOREtoken (382)
    SYNTAX (383)
    SYSTEMtoken (384)
    EXAMPLE (385)
    STATISTICS (386) 24 25 26 27 28 29 30 31
    SET_TABLEtoken (387) 166
    SET_TRANSACTIONtoken (388) 167
    TERMINAL_CHARSET (389) 32
    TRANSFORM (390) 180
    TRUNCATE (391) 175
    WITH (392) 176
    UNLOCK (393) 162
    UPD_STATS (394) 131
    UPD_HIST_STATS (395) 132
    USERtoken (396)
    TENANTtoken (397)
    USING (398) 75
    TABLE (399) 195
    VALUES (400) 196
    VALIDATE (401)
    VERBOSE (402)
    VERIFY (403)
    VERSIONtoken (404)
    WAITtoken (405) 42
    DEFINEtoken (406)
    ENVVARtoken (407) 102
    PREPARED (408)
    SESSIONtoken (409) 120
    LOG (410) 5 6 8 9 10
    LS (411)
    CD (412)
    SH (413)
    SHELL (414)
    SELECTtoken (415) 194
    UPDATEtoken (416) 121
    INSERTtoken (417) 122
    DELETEtoken (418) 125
    UPSERTtoken (419) 123
    ROWSETtoken (420) 124
    REPOSITORYtoken (421)
    CREATE (422) 127
    ALTER (423) 128
    DROP (424) 130
    PREPAREtoken (425) 71
    EXECUTEtoken (426) 73 75 76
    FROM (427) 71
    DECLAREtoken (428) 61 64
    OPENtoken (429) 65
    CLOSEtoken (430) 67
    FETCHtoken (431) 66
    DEALLOCtoken (432) 68
    CURSORtoken (433) 64
    FORtoken (434) 61 64 84 87 91 94 96
    CPU (435) 84 87
    PID (436) 91 94
    QID (437) 96
    ACTIVEtoken (438) 48
    ACCUMULATEDtoken (439) 51
    PERTABLEtoken (440) 26 52
    PROGRESStoken (441) 27 53
    TOK_BEGIN (442) 163
    COMMIT (443) 164
    ROLLBACK (444) 165
    WORK (445)
    SQLCI_CMD (446)
    SQL_STMT (447)
    UTIL_STMT (448)
    EXIT_STMT (449)
    ERROR_STMT (450)
    SHELL_CMD (451)
    IDENTIFIER <stringval_type> (452) 5 6 32 33 34 36 56 61 64 65 66 67 68 71 72 73 75 77 81 111
    NUMBER <stringval_type> (453) 12 13 14 15 16 35 43 48 84 91 103 104 106 108
    PARAM_NAME <stringval_type> (454) 17 39
    PATTERN_NAME <stringval_type> (455) 18 19 40
    FILENAME <stringval_type> (456) 8 9 23
    QUOTED_STRING <stringval_type> (457) 31 201
    DQUOTED_STRING <stringval_type> (458) 57
    GRANTtoken (459) 137
    REVOKEtoken (460) 138
    REGISTER (461) 139
    UNREGISTER (462) 140
    GIVE (463) 136
    INITIALIZE (464) 134
    REINITIALIZE (465) 135
    CATALOG (466) 115
    SCHEMA (467) 116
    HIVEtoken (468) 117
    PROCESStoken (469) 190
    IF (470) 169
    WHILE (471) 170
    MPLOC (472) 118
    NAMETYPE (473) 119
    SIGNAL (474) 171
    UIDtoken (475) 101
    BACKUP (476) 141
    BACKUPS (477)
    RESTORE (478) 142
    DUMP (479) 143
    EXPORTtoken (480) 144
    IMPORTtoken (481) 145
    CURSORWITH (482) 61
    WITHOUT (483)
    HOLD (484) 61
    INTERNAL (485) 172
    MVLOG (486) 173
    UNLOAD (487) 199
    CALLToken (488) 181
    COMMENTtoken (489) 191
    CHECK (490) 189
    TOK_SAVEPOINT (491) 192
    TOK_RELEASE (492) 193


Nonterminals, with rules where they appear

    $accept (238)
        on left: 0
    statement (239)
        on left: 1 2
        on right: 0
    sqlci_cmd <sqlci_cmd_type> (240)
        on left: 3 5 6 8 9 10 11 12 13 14 15 16 17 18 19 20 21 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 1
    $@1 (241)
        on left: 4
        on right: 5
    $@2 (242)
        on left: 7
        on right: 8
    $@3 (243)
        on left: 22
        on right: 23
    commands_only <intval_type> (244)
        on left: 44 45
        on right: 5 6 8 9
    empty (245)
        on left: 46
        on right: 45 50 55 107 200
    reset_type_ <reset_stmt_type_> (246)
        on left: 47
        on right: 41
    stats_active_clause <intval_type> (247)
        on left: 48 49 50
        on right: 84 87 91 94
    stats_merge_clause <intval_type> (248)
        on left: 51 52 53 54 55
        on right: 84 87 91 94 96
    qid_identifier <stringval_type> (249)
        on left: 56 57
        on right: 96
    sql_cmd <sql_cmd_type> (250)
        on left: 58 61 64 65 66 67 68 71 72 73 75 76 77 78 79 80 81 84 87 91 94 96 98 99 100 101 102 103 104 105 106
        on right: 2
    $@4 (251)
        on left: 59
        on right: 61
    $@5 (252)
        on left: 60
        on right: 61
    $@6 (253)
        on left: 62
        on right: 64
    $@7 (254)
        on left: 63
        on right: 64
    $@8 (255)
        on left: 69
        on right: 71
    $@9 (256)
        on left: 70
        on right: 71
    $@10 (257)
        on left: 74
        on right: 75
    $@11 (258)
        on left: 82
        on right: 84
    $@12 (259)
        on left: 83
        on right: 84
    $@13 (260)
        on left: 85
        on right: 87
    $@14 (261)
        on left: 86
        on right: 87
    $@15 (262)
        on left: 88
        on right: 91
    $@16 (263)
        on left: 89
        on right: 91
    $@17 (264)
        on left: 90
        on right: 91
    $@18 (265)
        on left: 92
        on right: 94
    $@19 (266)
        on left: 93
        on right: 94
    $@20 (267)
        on left: 95
        on right: 96
    $@21 (268)
        on left: 97
        on right: 98
    optional_rs_index <intval_type> (269)
        on left: 107 108
        on right: 111
    cursor_info <cursor_info_type_> (270)
        on left: 109 111
        on right: 64
    $@22 (271)
        on left: 110
        on right: 111
    dml_type <dml_stmt_type> (272)
        on left: 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193
        on right: 58 71 79 98
    dml_simple_table_type <dml_stmt_type> (273)
        on left: 194 195 196 197 198 199
        on right: 61 109 112 197
    explain_options <stringval_type> (274)
        on left: 200 201
        on right: 77 78 79


State 0

    0 $accept: . statement $end

    DESCRIBEToken         shift, and go to state 1
    CLEANUP               shift, and go to state 2
    CONTROL               shift, and go to state 3
    OSIM                  shift, and go to state 4
    ERRORtoken            shift, and go to state 5
    SUBERRORtoken         shift, and go to state 6
    DESC                  shift, and go to state 7
    DESCRIBE              shift, and go to state 8
    DISPLAY               shift, and go to state 9
    DISPLAY_STATISTICS    shift, and go to state 10
    DISPLAY_EXPLAIN       shift, and go to state 11
    EXIT                  shift, and go to state 12
    EXPLAIN               shift, and go to state 13
    GENERATEtoken         shift, and go to state 14
    MERGEtoken            shift, and go to state 15
    METADATAtoken         shift, and go to state 16
    REPLICATEtoken        shift, and go to state 17
    GETtoken              shift, and go to state 18
    GETSTATISTICStoken    shift, and go to state 19
    SHOWENV               shift, and go to state 20
    SHOWSTATS             shift, and go to state 21
    SHOWTRANSACTION       shift, and go to state 22
    INVOKE                shift, and go to state 23
    LOADtoken             shift, and go to state 24
    EXTRACTtoken          shift, and go to state 25
    LOCK                  shift, and go to state 26
    LOCKINGtoken          shift, and go to state 27
    LPAREN                shift, and go to state 28
    MODE                  shift, and go to state 29
    MODIFY                shift, and go to state 30
    MSCKtoken             shift, and go to state 31
    PURGEDATA             shift, and go to state 32
    POPULATE              shift, and go to state 33
    VALIDATEtoken         shift, and go to state 34
    REFRESH               shift, and go to state 35
    RESET                 shift, and go to state 36
    SETtoken              shift, and go to state 37
    SHOW                  shift, and go to state 38
    SHOWCONTROL           shift, and go to state 39
    SHOWINFO              shift, and go to state 40
    SHOWDDL               shift, and go to state 41
    SHOWPLAN              shift, and go to state 42
    SHOWSHAPE             shift, and go to state 43
    SHOWSET               shift, and go to state 44
    SLEEPtoken            shift, and go to state 45
    SET_TABLEtoken        shift, and go to state 46
    SET_TRANSACTIONtoken  shift, and go to state 47
    TRANSFORM             shift, and go to state 48
    TRUNCATE              shift, and go to state 49
    WITH                  shift, and go to state 50
    UNLOCK                shift, and go to state 51
    UPD_STATS             shift, and go to state 52
    UPD_HIST_STATS        shift, and go to state 53
    TABLE                 shift, and go to state 54
    VALUES                shift, and go to state 55
    WAITtoken             shift, and go to state 56
    LOG                   shift, and go to state 57
    SELECTtoken           shift, and go to state 58
    UPDATEtoken           shift, and go to state 59
    INSERTtoken           shift, and go to state 60
    DELETEtoken           shift, and go to state 61
    UPSERTtoken           shift, and go to state 62
    ROWSETtoken           shift, and go to state 63
    CREATE                shift, and go to state 64
    ALTER                 shift, and go to state 65
    DROP                  shift, and go to state 66
    PREPAREtoken          shift, and go to state 67
    EXECUTEtoken          shift, and go to state 68
    DECLAREtoken          shift, and go to state 69
    OPENtoken             shift, and go to state 70
    CLOSEtoken            shift, and go to state 71
    FETCHtoken            shift, and go to state 72
    DEALLOCtoken          shift, and go to state 73
    TOK_BEGIN             shift, and go to state 74
    COMMIT                shift, and go to state 75
    ROLLBACK              shift, and go to state 76
    GRANTtoken            shift, and go to state 77
    REVOKEtoken           shift, and go to state 78
    REGISTER              shift, and go to state 79
    UNREGISTER            shift, and go to state 80
    GIVE                  shift, and go to state 81
    INITIALIZE            shift, and go to state 82
    REINITIALIZE          shift, and go to state 83
    PROCESStoken          shift, and go to state 84
    IF                    shift, and go to state 85
    WHILE                 shift, and go to state 86
    SIGNAL                shift, and go to state 87
    BACKUP                shift, and go to state 88
    RESTORE               shift, and go to state 89
    DUMP                  shift, and go to state 90
    EXPORTtoken           shift, and go to state 91
    IMPORTtoken           shift, and go to state 92
    INTERNAL              shift, and go to state 93
    MVLOG                 shift, and go to state 94
    UNLOAD                shift, and go to state 95
    CALLToken             shift, and go to state 96
    COMMENTtoken          shift, and go to state 97
    CHECK                 shift, and go to state 98
    TOK_SAVEPOINT         shift, and go to state 99
    TOK_RELEASE           shift, and go to state 100

    statement              go to state 101
    sqlci_cmd              go to state 102
    sql_cmd                go to state 103
    dml_type               go to state 104
    dml_simple_table_type  go to state 105


State 1

   72 sql_cmd: DESCRIBEToken . STATEMENTtoken IDENTIFIER
  151 dml_type: DESCRIBEToken .

    STATEMENTtoken  shift, and go to state 106

    $default  reduce using rule 151 (dml_type)


State 2

  129 dml_type: CLEANUP .

    $default  reduce using rule 129 (dml_type)


State 3

  113 dml_type: CONTROL .

    $default  reduce using rule 113 (dml_type)


State 4

  114 dml_type: OSIM .

    $default  reduce using rule 114 (dml_type)


State 5

   12 sqlci_cmd: ERRORtoken . NUMBER
   13          | ERRORtoken . NUMBER COMMA BRIEF
   14          | ERRORtoken . NUMBER COMMA DETAIL
  106 sql_cmd: ERRORtoken . NUMBER COMMA GETtoken

    NUMBER  shift, and go to state 107


State 6

   15 sqlci_cmd: SUBERRORtoken . HBASEtoken NUMBER
   16          | SUBERRORtoken . TMtoken NUMBER

    HBASEtoken  shift, and go to state 108
    TMtoken     shift, and go to state 109


State 7

  154 dml_type: DESC .

    $default  reduce using rule 154 (dml_type)


State 8

  155 dml_type: DESCRIBE .

    $default  reduce using rule 155 (dml_type)


State 9

   98 sql_cmd: DISPLAY . $@21 dml_type

    $default  reduce using rule 97 ($@21)

    $@21  go to state 110


State 10

   80 sql_cmd: DISPLAY_STATISTICS .
   81        | DISPLAY_STATISTICS . IDENTIFIER
   84        | DISPLAY_STATISTICS . FORtoken CPU NUMBER $@11 stats_active_clause $@12 stats_merge_clause
   87        | DISPLAY_STATISTICS . FORtoken CPU CPU_VALUE $@13 stats_active_clause $@14 stats_merge_clause
   91        | DISPLAY_STATISTICS . FORtoken PID NUMBER $@15 COMMA NUMBER $@16 stats_active_clause $@17 stats_merge_clause
   94        | DISPLAY_STATISTICS . FORtoken PID PID_VALUE $@18 stats_active_clause $@19 stats_merge_clause
   96        | DISPLAY_STATISTICS . FORtoken QID qid_identifier $@20 stats_merge_clause

    FORtoken    shift, and go to state 111
    IDENTIFIER  shift, and go to state 112

    $default  reduce using rule 80 (sql_cmd)


State 11

   77 sql_cmd: DISPLAY_EXPLAIN . explain_options IDENTIFIER
   78        | DISPLAY_EXPLAIN . explain_options PROCEDUREtoken
   79        | DISPLAY_EXPLAIN . explain_options dml_type

    OPTIONStoken  shift, and go to state 113

    $default  reduce using rule 46 (empty)

    empty            go to state 114
    explain_options  go to state 115


State 12

   11 sqlci_cmd: EXIT .

    $default  reduce using rule 11 (sqlci_cmd)


State 13

  187 dml_type: EXPLAIN .

    $default  reduce using rule 187 (dml_type)


State 14

  186 dml_type: GENERATEtoken .

    $default  reduce using rule 186 (dml_type)


State 15

  126 dml_type: MERGEtoken .

    $default  reduce using rule 126 (dml_type)


State 16

  133 dml_type: METADATAtoken .

    $default  reduce using rule 133 (dml_type)


State 17

  185 dml_type: REPLICATEtoken .

    $default  reduce using rule 185 (dml_type)


State 18

   99 sql_cmd: GETtoken .
  101        | GETtoken . UIDtoken
  188 dml_type: GETtoken .

    UIDtoken  shift, and go to state 116

    $end      reduce using rule 99 (sql_cmd)
    $end      [reduce using rule 188 (dml_type)]
    $default  reduce using rule 99 (sql_cmd)


State 19

  100 sql_cmd: GETSTATISTICStoken .

    $default  reduce using rule 100 (sql_cmd)


State 20

  148 dml_type: SHOWENV .

    $default  reduce using rule 148 (dml_type)


State 21

  152 dml_type: SHOWSTATS .

    $default  reduce using rule 152 (dml_type)


State 22

  153 dml_type: SHOWTRANSACTION .

    $default  reduce using rule 153 (dml_type)


State 23

  156 dml_type: INVOKE .

    $default  reduce using rule 156 (dml_type)


State 24

  182 dml_type: LOADtoken .

    $default  reduce using rule 182 (dml_type)


State 25

  184 dml_type: EXTRACTtoken .

    $default  reduce using rule 184 (dml_type)


State 26

  161 dml_type: LOCK .

    $default  reduce using rule 161 (dml_type)


State 27

  198 dml_simple_table_type: LOCKINGtoken .

    $default  reduce using rule 198 (dml_simple_table_type)


State 28

  197 dml_simple_table_type: LPAREN . dml_simple_table_type

    LOCKINGtoken  shift, and go to state 27
    LPAREN        shift, and go to state 28
    TABLE         shift, and go to state 54
    VALUES        shift, and go to state 55
    SELECTtoken   shift, and go to state 58
    UNLOAD        shift, and go to state 95

    dml_simple_table_type  go to state 117


State 29

    3 sqlci_cmd: MODE . SQL

    SQL  shift, and go to state 118


State 30

  168 dml_type: MODIFY .

    $default  reduce using rule 168 (dml_type)


State 31

  183 dml_type: MSCKtoken .

    $default  reduce using rule 183 (dml_type)


State 32

  174 dml_type: PURGEDATA .

    $default  reduce using rule 174 (dml_type)


State 33

  177 dml_type: POPULATE .

    $default  reduce using rule 177 (dml_type)


State 34

  178 dml_type: VALIDATEtoken .

    $default  reduce using rule 178 (dml_type)


State 35

  179 dml_type: REFRESH .

    $default  reduce using rule 179 (dml_type)


State 36

   39 sqlci_cmd: RESET . PARAM PARAM_NAME
   40          | RESET . SQ_LINUX_PATTERN PATTERN_NAME
   41          | RESET . reset_type_
  104 sql_cmd: RESET . PARSERFLAGS NUMBER
  105        | RESET . PARSERFLAGS

    PARAM             shift, and go to state 119
    PARSERFLAGS       shift, and go to state 120
    SQ_LINUX_PATTERN  shift, and go to state 121

    reset_type_  go to state 122


State 37

   17 sqlci_cmd: SETtoken . PARAM PARAM_NAME
   18          | SETtoken . SQ_LINUX_PATTERN PATTERN_NAME
   19          | SETtoken . PATTERN_AS_IS PATTERN_NAME
   20          | SETtoken . SHOWSHAPE ON
   21          | SETtoken . SHOWSHAPE OFF
   23          | SETtoken . SHOWSHAPE INFILE FILENAME $@3 OUTFILE FILENAME
   24          | SETtoken . STATISTICS OFF
   25          | SETtoken . STATISTICS ON
   26          | SETtoken . STATISTICS PERTABLEtoken
   27          | SETtoken . STATISTICS PROGRESStoken
   28          | SETtoken . STATISTICS DEFAULTtoken
   29          | SETtoken . STATISTICS ALLtoken
   30          | SETtoken . STATISTICS ON COMMA GETtoken STATISTICS
   31          | SETtoken . STATISTICS ON COMMA GETtoken STATISTICS COMMA OPTIONStoken QUOTED_STRING
   32          | SETtoken . TERMINAL_CHARSET IDENTIFIER
   33          | SETtoken . ISO_MAPPING IDENTIFIER
   34          | SETtoken . DEFAULT_CHARSETtoken IDENTIFIER
   35          | SETtoken . INFER_CHARSET NUMBER
   36          | SETtoken . INFER_CHARSET IDENTIFIER
   37          | SETtoken . INFER_CHARSET ON
   38          | SETtoken . INFER_CHARSET OFF
  103 sql_cmd: SETtoken . PARSERFLAGS NUMBER
  115 dml_type: SETtoken . CATALOG
  116         | SETtoken . SCHEMA
  117         | SETtoken . HIVEtoken
  118         | SETtoken . MPLOC
  119         | SETtoken . NAMETYPE
  120         | SETtoken . SESSIONtoken
